feat: add isAuthenticated to display different view templates

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,6 +24,7 @@
                 <a class="dropdown-item" href="/sort/rating/descending">評分：由高至低</a>
                 <a class="dropdown-item" href="/sort/rating/ascending">評分：由低至高</a>
               </div>
+              <a class="btn btn-success" href="/restaurants/new">Create</a>
             </div>
           </div>
         </div>
