--- a/views/new.hbs
+++ b/views/new.hbs
@@ -13,7 +13,7 @@
   </div>
   <div class="form-group">
     <label for="image">image*</label>
-    <input type="text" class="form-control" placeholder="image" name="image" required />
+    <input type="url" class="form-control" placeholder="image" name="image" required />
   </div>
   <div class="form-group">
     <label for="location">Location*</label>
@@ -25,7 +25,7 @@
   </div>
   <div class="form-group">
     <label for="google_map">Google Map*</label>
-    <input type="url" required/ class="form-control" placeholder="google_map" name="google_map" required />
+    <input type="url" class="form-control" placeholder="google_map" name="google_map" required />
   </div>
   <div class="form-group">
     <label for="rating">Rating*</label>
