--- a/views/show.hbs
+++ b/views/show.hbs
@@ -33,8 +33,10 @@
       <p class="mb-5">
         {{restaurant.description}}
       </p>
-
-      <img class="rounded mx-auto d-block mb-4 w-100" src="{{restaurant.image}}" alt="{{restaurant.name}}" style="max-width: 600px;">
+      <div class='card'>
+        <img class="rounded mx-auto d-block mb-4 w-100" onerror="nofind()" src="{{restaurant.image}}" alt="{{restaurant.name}}"
+          style="max-width: 600px; min-height:180px">
+      </div>
     </div>
   </div>
   <div class="container ">
